--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <button id="b1">2</button>
                     <button id="b1">3</button>
                     <button id="b1">4</button>
-                    <button id="b1"><</button>
+                    <button id="b1">></button>
                 </div>
             </div>
         </div>
